
[TestScaffoldBasicOperations/Unknown_distribution - 1]
provided distribution is unknown
---

[TestScaffoldContentValidation/K3d_configuration_content - 1]
apiVersion: ksail.dev/v1alpha1
kind: Cluster
spec:
  distribution: K3d
  distributionConfig: k3d.yaml

---

[TestScaffoldContentValidation/K3d_configuration_content - 2]
apiVersion: k3d.io/v1alpha5
kind: Simple
metadata:
  name: ksail-default

---

[TestScaffoldContentValidation/K3d_configuration_content - 3]
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources: []

---

[TestScaffoldContentValidation/Kind_configuration_content - 1]
apiVersion: ksail.dev/v1alpha1
kind: Cluster

---

[TestScaffoldContentValidation/Kind_configuration_content - 2]
apiVersion: kind.x-k8s.io/v1alpha4
kind: Cluster

---

[TestScaffoldContentValidation/Kind_configuration_content - 3]
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources: []

---

[TestScaffoldErrorHandling/distribution_error_paths - 1]
provided distribution is unknown
---

[TestScaffoldErrorHandling/invalid_output_path - 1]
Error type: *fmt.wrapErrors, contains 'invalid argument': true
---

[TestScaffoldGeneratorFailures/K3d_config_with_problematic_path - 1]
K3d error occurred: false
---

[TestScaffoldGeneratorFailures/Kind_config_with_problematic_path - 1]
Kind error occurred: false
---
